Fixes Xamarin landing page layout issues

--- a/src/styles/billboard.styl
+++ b/src/styles/billboard.styl
@@ -62,6 +62,10 @@ body.xamarin #billboard
   background-image: url('assets/img/billboards/contact.jpg')
   h1
     font-size: 5em
+    @media (max-width: 1000px)
+      font-size: 2.5em
+    @media (max-width: 500px)
+      font-size: 1.75em !important
   h1:before
     content: "Everything you need to deliver great mobile apps"
 
